[package]
authors = ["Ryan Summers <ryan.summers@vertigo-designs.com>"]
edition = "2018"
readme = "README.md"
name = "pounder_bringup"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
mcp23017 = "0.1.1"
embedded-hal = "0.2.3"

[dependencies.stm32h7xx-hal]
git = "https://github.com/quartiq/stm32h7xx-hal.git"
branch = "feature/quad-spi"
features = ["stm32h743v", "rt"]

[dependencies.ad9959]
git = "https://github.com/quartiq/ad9959.git"
branch = "feature/basic-driver"

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
